--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,6 +1,15 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#navbar-logo {
+
+  font-weight: bold;
+  color: #fff;
+
+  &:hover {
+    text-decoration: none;
+  }
+}
 
 #homepage {
 
