--- a/app/views/events/_event_details.html.erb
+++ b/app/views/events/_event_details.html.erb
@@ -1,5 +1,5 @@
 <h4>
-  <span class="text-muted">Date:</span> <%= @event.occurring_on %>
+  <span class="text-muted">Date:</span> <%= @event.occurring_on.time.to_formatted_s(:long_ordinal) %>
 </h4>
 <h4>
   <span class="text-muted">Location:</span> <%= @event.location %>
