--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <div class="col-lg-10 col-lg-offset-1">
       <div class="navbar navbar-default navbar-fixed-top">
         <div class="navbar-header">
-          <span class="navbar-brand"><%= COMPANY_NAME %></span>
+          <span class="navbar-brand"><%= link_to COMPANY_NAME, root_path, id: "navbar-logo" %></span>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
