--- a/app/assets/stylesheets/registrations.css.scss
+++ b/app/assets/stylesheets/registrations.css.scss
@@ -26,6 +26,12 @@
     }
 
     .form-body{
+
+      .hr-line {
+        border-bottom: 1px solid #fff;
+        width: 100%;
+      }
+
       .register-form-group{
         margin: 10px;
 
@@ -44,6 +50,7 @@
     }
 
     .btn-primary, .btn-block {
+      font-size: 1.25em;
       background-color: #34C6CD;
       border-color: #44969A;
     }
@@ -51,6 +58,40 @@
     .btn-primary:hover, .btn-block:hover {
       background-color: #44969A;
       text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+    }
+
+    .rsvp {
+      margin-top: 20px;
+    }
+
+    .custom-rsvp {
+      margin-top: 20px; 
+      margin-left: 11%;
+    }
+
+    .custom-field {
+      label {
+        padding-left: 10.5%;
+      }
+
+      input[type="text"] {
+        width: 50%;
+        margin-left: 10%;
+      }
+
+      select {
+        width: 50%;
+        margin-left: 10%;
+      }
+
+      input[type="checkbox"] { 
+        margin-right: 10px;
+      }
+
+      input[type="radio"] {
+        margin-right: 10px; 
+      }
+
     }
   }
 }
