--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -1,4 +1,5 @@
 <h1>Invitation Accepted</h1>
 
-<%= @event.title %><br>
-<%= @registration.name %>
+<h3>Congratulations, <%= @registration.name %>!</h3> 
+  <h3>You are registered for <%= @event.title %> 
+    on <%= @event.occurring_on %></h3>
