Add image to new registration form

--- a/app/assets/stylesheets/registrations.css.scss
+++ b/app/assets/stylesheets/registrations.css.scss
@@ -69,6 +69,7 @@
     .custom-rsvp {
       margin-top: 20px; 
       @extend .col-lg-6;
+      @extend .col-lg-offset-3;
     }
 
     .custom-field {
