--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,4 +1,6 @@
 <div id="register-form" class="col-lg-10 col-lg-offset-1">
+
+  <%= image_tag(@event.image_url, class: "col-lg-4 col-lg-offset-4") %>
   <div class="form-header col-lg-10 col-lg-offset-1">
     <h1>Register for <span class="form-event-title"><%= @event.title %></span></h1>
   </div>
