--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
             <li>
               <%= link_to "Event listing", events_path %>
             </li>
+            <li>
+              <%= link_to "+ Create New Event", new_event_path %>
+            </li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
